--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  font-family: inherit;
   min-width: 320px;
   min-height: 100vh;
 }
